[package]
name = "charon"
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]

[dependencies]
byteorder = "*"
regex = "*"
lalrpop = { path = "/home/gbr/devel/ext/lalrpop/lalrpop" }
lalrpop-util = { path = "/home/gbr/devel/ext/lalrpop/lalrpop-util" }

[build-dependencies]
lalrpop = { path = "/home/gbr/devel/ext/lalrpop/lalrpop" }
